update the sping-solr project

--- a/spring-based-poc/spring-solr-tuto/pom.xml
+++ b/spring-based-poc/spring-solr-tuto/pom.xml
@@ -22,9 +22,31 @@
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.1</version>
+		</dependency>
+		    <!-- Jackson JSON Processor -->
+	    <dependency>
+	        <groupId>com.fasterxml.jackson.core</groupId>
+	        <artifactId>jackson-databind</artifactId>
+	        <version>${jackson.version}</version>
+	    </dependency>
+	    <dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<!-- SOLR -->
+		<dependency>
+		   <groupId>org.springframework.data</groupId>
+		   <artifactId>spring-data-solr</artifactId>
+		   <version>${spring.data-solr.version}</version>
 		</dependency>
   </dependencies>
   <build>
