--- a/spring-based-poc/pom.xml
+++ b/spring-based-poc/pom.xml
@@ -13,6 +13,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <spring.version>4.3.0.RELEASE</spring.version>
 	<spring.security.version>4.0.2.RELEASE</spring.security.version>
+	<jackson.version>2.9.8</jackson.version>
+	<spring.data-solr.version>4.0.4.RELEASE</spring.data-solr.version>
   </properties>
   
   	<modules>  
