--- a/spring-based-poc/spring-solr-tuto/src/main/webapp/WEB-INF/web.xml
+++ b/spring-based-poc/spring-solr-tuto/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,10 @@
 	<display-name>spring-mvc-tuto</display-name>
 	
 	<!-- Listener configuration -->
-	<context-param>
+<!-- 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
-	</context-param>
+	</context-param> -->
 <!-- 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -26,7 +26,7 @@
 	 </servlet-class>
 	 <init-param>
 	 	<param-name>contextConfigLocation</param-name>
-	 	<param-value />
+	 	<param-value>/WEB-INF/applicationContext.xml</param-value>
 	 </init-param>
 	 <load-on-startup>1</load-on-startup>
 	</servlet>
