--- a/tutorial-project/hibernate-poc/pom.xml
+++ b/tutorial-project/hibernate-poc/pom.xml
@@ -17,13 +17,13 @@
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
 	</dependency>
-	<!-- Oracle14 dependency 
+	<!-- Oracle14 dependency  -->
 	<dependency>
 	 	<groupId>com.oracle</groupId>
 	 	<artifactId>ojdbc14</artifactId>
 	 	<version>${oracle14.db.version}</version>
 	 </dependency>
-	 -->
+	
 	 <!-- Oracle8 jdbc driver in case of oracle12 database -->
 <!-- 	<dependency>
 	    <groupId>com.github.noraui</groupId>
