--- a/tutorial-project/hibernate-poc/src/main/resources/hibernate.properties
+++ b/tutorial-project/hibernate-poc/src/main/resources/hibernate.properties
@@ -1,6 +1,6 @@
 hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-hibernate.driver.class=oracle.jdbc.driver.OracleDriver</property>
-hibernate.connection.url=jdbc:oracle:thin:@localhost:1521:rcde
+hibernate.driver.class=oracle.jdbc.driver.OracleDriver
+hibernate.connection.url=jdbc:oracle:thin:@localhost:1521:xe
 hibernate.connection.username=system
 hibernate.connection.password=root
 hibernate.show_sql=true
